JDO-861 Finding 4: Replace deprecated Class.newInstance() in getEnhancer
Use getDeclaredConstructor().newInstance() instead of the Java 9+
deprecated newInstance() to ensure proper exception handling and
constructor accessibility checks.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>